[package]
name = "rsleveldb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
crc = "2.1.0"
rand = "0.8.5"
snap = "1"
parking_lot = "0.12"


[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "memdb"
harness = false